--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "not op_mini all"
   ],
   "engines": {
-    "node": "8.10.0"
+    "node": "<=10.10.0"
   },
   "devDependencies": {
     "node-sass": "^4.11.0"
